@@ -1,3 +1,11 @@
+Fri Aug 10 11:25:19 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * dance/LocalityManager/Daemon/Locality_Manager_Impl.cpp:
+        * dance/LocalityManager/Handler/LocalityActivator_Impl.cpp:
+        * dance/LocalityManager/Handler/Plugin_Conf.cpp:
+        * dance/LocalityManager/Interceptors/Standard_Error.cpp:
+          Layout changes, const fixes, debug message fixes
+
 Fri Aug 10 10:59:29 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * dance/LocalityManager/Daemon/Locality_Manager_Impl.cpp:
